--- a/index.html
+++ b/index.html
@@ -39,35 +39,32 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a href="#" class="nav-link">Company
+                <li class="nav-item">
+                    <a class="menuTop" href="index1.html">Company
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" >Vehicles
+                    <a class="menuTop" href="index1.html">Vehicles</a>
+                </li>
+                <li class="nav-item">
+                        <a class="menuTop" href="index1.html">Design</a>
+                </li>
+                <li class="nav-item">
+                    <a class="menuTop" href="index1.html">Innovation
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Design
-
+                    <a class="menuTop" href="index1.html">History
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Innovation
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">History
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contacts
+                    <a class="menuTop" href="index1.html">Contacts
                     </a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input type="text" class="form-control mr-sm-2" placeholder="search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0">search
+                <button class="btn btn-outline-dark my-2 my-sm-0">search
                 </button>
             </form>
         </div>
