--- a/index1.html
+++ b/index1.html
@@ -2,9 +2,164 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>privet</title>
+    <title>HISTORY</title>
+
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/style.css">
+    <!--carousel-->
+    <link rel="stylesheet" href="css/owl.carousel.css">
+
+    <link rel="stylesheet" href="css/owl.theme.default.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
+
+
+
 </head>
 <body>
-    HELLO
+
+<!--navbar/ header/ -->
+<nav class="navbar navbar-expand-lg navbar-dark background-dark sticky-top">
+    <a href="" class="navbar-brand">
+        <img src="https://i.gifer.com/RQcJ.gif" width="50" height="50" alt="logo">
+    </a>
+    <div class="nav navbar-nav">
+        <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <p class="navbar-text mb">Mercedes-Benz</p>
+            </li>
+        </ul>
+    </div>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="menuTop" href="index1.html">Company
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="menuTop" href="index1.html">Vehicles</a>
+            </li>
+            <li class="nav-item">
+                <a class="menuTop" href="index1.html">Design</a>
+            </li>
+            <li class="nav-item">
+                <a class="menuTop" href="index1.html">Innovation
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="menuTop" href="index1.html">History
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="menuTop" href="index1.html">Contacts
+                </a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input type="text" class="form-control mr-sm-2" placeholder="search" aria-label="Search">
+            <button class="btn btn-outline-dark my-2 my-sm-0">search
+            </button>
+        </form>
+    </div>
+</nav>
+
+
+               <!-- carousel -->
+
+<div class="owl-carousel slide-one">
+    <div class="item">
+        <img src="img/1.jpg">
+    </div>
+    <div class="item">
+        <img src="img/2.jpg">
+    </div>
+    <div class="item">
+        <img src="img/3.jpg">
+    </div>
+    <div class="item">
+        <img src="img/4.jpg">
+    </div>
+    <div class="item">
+        <img src="img/5.jpg">
+    </div>
+    <div class="item">
+        <img src="img/6.jpg">
+    </div>
+    <div class="item">
+        <img src="img/7.jpg">
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
+<script src="js/owl.carousel.js"></script>
+
+<script>$(document).ready(function(){
+    $(".slide-one").owlCarousel({
+        autoHeight: true,
+        loop: true,
+        slideBy: 1,
+        fluidSpeed: 1000,
+        items: 1,
+        touchDrag: true,
+        mergeFit: false,
+        autoplay: true,
+        autoplayTimeout: 10000,
+        autoplayHoverPause: true,
+        smartSpeed: 5000,
+        responsive: {
+            0:{items:1},
+            600:{items:2},
+            960:{items:4},
+            1000:{items:4},
+        }
+    });
+
+    $(".slide-two").owlCarousel({
+        autoHeight: true,
+        loop: true,
+        slideBy: 1,
+        fluidSpeed: 1000,
+        items: 1,
+        touchDrag: true,
+        mergeFit: false,
+        autoplay: true,
+        autoplayTimeout: 15000,
+        autoplayHoverPause: true,
+        smartSpeed: 5000,
+        responsive: {
+            0:{items:1},
+            600:{items:1},
+            960:{items:1},
+            1000:{items:1},
+        }
+    });
+
+
+
+
+});</script>
+
+
 </body>
 </html>
