--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                      <div class="row">
                          <div class="col-md-6 head1">
                              <div class="head2">
-                                 Our <b>Goal</b>
+                                 <h4>Our <b>Goal</b></h4>
                              </div>
                          </div>
                      </div>
@@ -150,20 +150,20 @@
                      <!--slider OUR GOAL -->
                      <div class="carous">
                         <div  class="owl-carousel slide-two">
-                            <div class="item1"><p>Artifical Intelligence</p>
+                            <div class="item1"><h4>Artifical Intelligence</h4>
                                 MBUX, the new Mercedes-Benz User Experience, makes the A-Class more intelligent than ever before.
                                 It learns more every day and most of all gets to know it's driver more and more.
                                 It can remember your favourite songs and the way to work. Based on your habits,
                                 it detects the right radio stations and displays them as favourites,
                                 or it shows you a faster way if your usual route is congested.
                                 All by itself and as a matter of course, if that is what you want.</div>
-                            <div class="item1"><p>Head-up Display</p>
+                            <div class="item1"><h4>Head-up Display</h4>
                                 The AMG Advanced Navigation package adds the benefits of a head-up display.
                                 Important information is reflected onto the windshield, directly in the field of vision,
                                 ensuring drivers are less distracted from what is on the road ahead.
                                 Because the eyes do not have to adjust focus or make optical corrections,
                                 drivers do not become tired so quickly.</div>
-                            <div class="item1"><p>LINGUATRONIC voice control system</p>
+                            <div class="item1"><h4>LINGUATRONIC voice control system</h4>
                                 Thanks to the optional, completely overhauled LINGUATRONIC language control system the A-Class obeys your every command.
                                 However, it does much more: it understands you without having to learn commands beforehand. And it talks to you.
                                 Reading out text messages, or dictating one and sending it? No problem. It checks the weather at the destination for you,
@@ -221,7 +221,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="header2">
-                    <h3>What <b>We Do</b></h3></div>
+                    <h4>What <b>We Do</b></h4></div>
             </div>
             <div class="col-md-5">
                     <div class="container img">
@@ -284,7 +284,7 @@
     <div class="container BLOG">
         <div class="row">
             <div class="col-md-12">
-                <div class="header3 center">
+                <div class="header3">
                     <h4>Mercedes-Benz: <b>Innovation</b></h4>
                     As a pioneer of the automobile, we seek innovations which provide for pleasant,
                     safe and resource-friendly mobility,
