--- a/index.html
+++ b/index.html
@@ -225,7 +225,9 @@
             </div>
             <div class="col-md-5">
                     <div class="container img">
-                        <div class="image">img</div>      <!--images-->
+
+                        <img src="img/23.jpg" class="img-fluid innovation" alt="Responsive image" class="img-fluid rounded">
+
                     </div>
             </div>
 
@@ -259,7 +261,11 @@
         <div class="container">
             <div class="row itemS3">
                 <div class="col-md-6">
-                    <div class="img">table</div>
+                    <div class="img">
+
+                        <img src="img/24.jpg">
+
+                    </div>
                 </div>
                 <div class="col-md-6">
                         <div class="about">Celebration</div>
