--- a/index.html
+++ b/index.html
@@ -258,16 +258,13 @@
         </div>
     </div>
     <div class="container-fluid midBar1Fluid">
-
-            <div class="row itemS3">
-                <div class="col-md-6">
-
-                        <img src="img/24.jpg">
-
+            <div class="row">
+                <div class="col-md-6 WOM">
+                        <img class="img-fluid" src="img/24.jpg">
                 </div>
 
                 <div class="col-md-6">
-                        <div class="about">Celebration</div>
+                        <div class="about11">Celebration</div>
                         <div class="about">We are extraordinary</div>
                         <div class="about">Building on the Best</div>
                 </div>
@@ -281,7 +278,13 @@
                         <div class="about1"><h3>Get<b>Newsletter</b></h3></div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="about1"><h3><b>e-mail</b></h3></div>
+                    <div class="about1">
+                        <form class="form-inline my-2 my-lg-0">
+                        <input type="text" class="form-control mr-sm-2" placeholder="Your email address" aria-label="Mail">
+                        <button class="btn btn-outline-dark my-2 my-sm-0">Subscribe!
+                        </button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
