--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
                     <h4>What <b>We Do</b></h4></div>
             </div>
             <div class="col-md-5">
-                    <div class="container img">
+
 
                         <img src="img/23.jpg" class="img-fluid innovation" alt="Responsive image" class="img-fluid rounded">
 
-                    </div>
+
             </div>
 
             <div class="col-md-6 offset-md-1">
@@ -259,7 +259,7 @@
     </div>
     <div class="container-fluid midBar1Fluid">
             <div class="row">
-                <div class="col-md-6 WOM">
+                <div class="col-md-6">
                         <img class="img-fluid" src="img/24.jpg">
                 </div>
 
@@ -275,13 +275,16 @@
         <div class="container 1">
             <div class="row itemS4">
                 <div class="col-lg-6">
-                        <div class="about1"><h3>Get<b>Newsletter</b></h3></div>
+                        <div class="about1"><h3>Get<b>Newsletter</b></h3>
+                            <p>To keep you in the loop of our latest news, register now for our email newsletter</p>
+                        </div>
+
                 </div>
                 <div class="col-lg-6">
-                    <div class="about1">
+                    <div class="about111">
                         <form class="form-inline my-2 my-lg-0">
                         <input type="text" class="form-control mr-sm-2" placeholder="Your email address" aria-label="Mail">
-                        <button class="btn btn-outline-dark my-2 my-sm-0">Subscribe!
+                        <button class="btn btn-outline-dark my-2 my-sm-0 btn1">Subscribe!
                         </button>
                         </form>
                     </div>
@@ -303,40 +306,40 @@
                     Each of the four CASE fields in itself already changes mobility fundamentally; however, the revolutionary potential only becomes apparent when the CASE fields are combined.
                 </div>
             </div>
-            <div class="col-md-4">
 
+            <div class="col-md-4">
                 <div class="skills">
-                    <img src="img/17.jpg" class="img-fluid" alt="Responsive image"class="img-fluid rounded">
-                    <div class="text center">
+                    <img src="img/17.jpg" alt="image"class="img-fluid rounded">
+                    <div class="text center-fluid">
                     <h4>E-<b>Mobility</b></h4>
-                    On the road to emission-free driving, the developers use a host of control levers to reduce emissions on a lasting basis.
+                    <p>On the road to emission-free driving, the developers use a host of control levers to reduce emissions on a lasting basis.
                     Different electrified alternatives will be available in every segment – from smart to large SUVs.
-                    These activities are bundles under the new product and technology brand EQ
+                        These activities are bundles under the new product and technology brand EQ</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="skills">
-                    <img src="img/f015.jpg" class="img-fluid" alt="Responsive image" class="img-fluid rounded">
-                    <div class="text center">
+                    <img src="img/f015.jpg" alt="image" class="img-fluid rounded">
+                    <div class="text center-fluid">
                     <h4>Autonomous <b>Driving</b></h4>
-                    Artificial intelligence will play a key role in this.
+                    <p>Artificial intelligence will play a key role in this.
                     Mercedes-Benz is a pioneer when it comes to autonomous driving.
                     Prototypes such as the Mercedes-Benz S-Class S 500 INTELLIGENT DRIVE,
                     the F 015 Luxury in Motion or the Future Truck 2025 show that the technical
-                    conditions for autonomous driving are already well established
+                        conditions for autonomous driving are already well established</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="skills">
-                    <img src="img/car2go.jpg" class="img-fluid" alt="Responsive image" class="img-fluid rounded">
-                    <div class="text center">
+                    <img src="img/car2go.jpg" alt="image" class="img-fluid rounded">
+                    <div class="text center-fluid">
                     <h4>Mobility <b>Concepts</b></h4>
-                    As the world’s first station-independent car sharing service, car2go offers flexible mobility.
+                    <p>As the world’s first station-independent car sharing service, car2go offers flexible mobility.
                     Vehicles of the smart and Mercedes-Benz brands are available everywhere and at any time at favourable
                     prices in the inner city areas of various metropolises.
-                    Every 1.2 seconds a car2go smart or Mercedes-Benz is in use somewhere in the world
+                        Every 1.2 seconds a car2go smart or Mercedes-Benz is in use somewhere in the world</p>
                     </div>
                 </div>
             </div>
@@ -345,7 +348,25 @@
     <div class="container-fluid midBar1Fluid1">
         <div class="row">
             <div class="col-md-8 offset-2">
-                <div class="VIDEO PLAYER">video player</div>
+                <div class="VIDEO PLAYER">
+
+                    <video width="100%" controls>
+                        <source src="video/videoplayback.mp4" type="video/mp4">
+                        <source src="video/videoplayback.mp4" type="video/ogg">
+                        Your browser does not support HTML5 video.
+                    </video>
+
+                    <p>
+                         source:
+                        <a href="https://www.youtube.com/watch?v=TbJNGmgHm7M/" target="_blank">EQ Technology</a>
+                    </p>
+                    <p>EQ represents intelligent electromobility. For appealing design, extraordinary driving pleasure,
+                        high levels of everyday suitability and maximum safety.
+                        The new product and technology brand represents “emotion and intelligence”,
+                        two Mercedes-Benz brand values.
+                    </p>
+
+                </div>
             </div>
         </div>
     </div>
@@ -359,28 +380,29 @@
                     For Mercedes-Benz designers, good design has to be both beautiful and intelligent.
                 </div>
             </div>
-            <div class="col-md-8 offset-2">
+            <div class="col-md-8">
                 <div class="skills">
-                    <div  class="owl-carousel slide-two">
+
                         <div class="row">
                             <div class="col-sm-4">
-                                <img src="img/20.jpg" class="img-fluid" alt="Responsive image">
+                                <img src="img/20.jpg" class="img-fluid rounded" alt="Responsive image" >
                                 <div class="text center"><h4>Gorden Wagener</h4></div>
                             </div>
                             <div class="col-sm-4">
-                                <img src="img/22.jpg" class="img-fluid" alt="Responsive image">
+                                <img src="img/22.jpg" class="img-fluid rounded" alt="Responsive image">
                                 <div class="text center"><h4>Bertrand Janssen</h4></div>
                             </div>
                             <div class="col-sm-4">
-                                <img src="img/21.jpg" class="img-fluid" alt="Responsive image">
+                                <img src="img/21.jpg" class="img-fluid rounded" alt="Responsive image">
                                 <div class="text center"><h4>Turet Knuefermann</h4></div>
                             </div>
                         </div>
-                    </div>
+
                 </div>
             </div>
         </div>
     </div>
+
 
 
 
@@ -428,9 +450,9 @@
         touchDrag: true,
         mergeFit: false,
         autoplay: true,
-        autoplayTimeout: 15000,
+        autoplayTimeout: 25000,
         autoplayHoverPause: true,
-        smartSpeed: 5000,
+        smartSpeed: 10000,
         responsive: {
             0:{items:1},
             600:{items:1},
