--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css">
     <!--carousel-->
@@ -34,7 +35,8 @@
     </ul>
 </div>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -110,44 +112,40 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="cont">All about cars</div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="cont">All about cars</div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="cont">News</div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="cont">Discover more</div>
+                </div>
             </div>
-            <div class="col-lg-4">
-                <div class="cont">News</div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="cont">Electric Intelligence by Mercedes-Benz</div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="cont">Mercedes-Benz Museum</div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="cont">She's Mercedes</div>
+                </div>
             </div>
-            <div class="col-lg-4">
-                <div class="cont">Discover more</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="cont">Electric Intelligence by Mercedes-Benz</div>
-            </div>
-            <div class="col-lg-4">
-                <div class="cont">Mercedes-Benz Museum</div>
-            </div>
-            <div class="col-lg-4">
-                <div class="cont">She's Mercedes</div>
-            </div>
-        </div>
     </div>
 <!--OurGoal-->
     <div class="container-fluid midBar1Fluid">
-         <div class="container">
-             <div class="row">
-                 <div class="container head0">
-                     <div class="row">
-                         <div class="col-md-6 head1">
-                             <div class="head2">
-                                 <h4>Our <b>Goal</b></h4>
-                             </div>
-                         </div>
-                     </div>
+             <div class="col-lg">
+                 <div class="head2">
+                     <h4>Our <b>Goal</b></h4>
                  </div>
+             </div>
+        <!--slider OUR GOAL -->
+        <div class="container live">
+             <div class="row">
                  <div class="col-md-6">
-                     <!--slider OUR GOAL -->
                      <div class="carous">
                         <div  class="owl-carousel slide-two">
                             <div class="item1"><h4>Artifical Intelligence</h4>
@@ -174,23 +172,26 @@
                      </div>
                  </div>
                  <div class="col-md-6">
-                     <div class="row itemS0">
-                         <div class="col-md-6">
-                             <div class="midBar">Daimler</div>
-                         </div>
+                     <div class="row">
                          <div class="col-md-6">
                              <div class="midBar">Shopping</div>
                          </div>
                          <div class="col-md-6">
                              <div class="midBar">Daimler</div>
-                         </div>
-                         <div class="col-md-6">
-                             <div class="midBar">Shopping</div>
                          </div>
                      </div>
+                     <div class="row">
+                         <div class="col-md-6">
+                             <div class="midBar">Shopping</div>
+                         </div>
+                         <div class="col-md-6">
+                             <div class="midBar">Daimler</div>
+                         </div>
+                     </div>
+
                  </div>
              </div>
-         </div>
+        </div>
     </div>
 
     <div class="container ABS">
@@ -345,9 +346,9 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid midBar1Fluid1">
-        <div class="row">
-            <div class="col-md-8 offset-2">
+    <div class="container-fluid midBar1Fluid">
+        <div class="row justify-content-md-center">
+            <div class="col-md-8">
                 <div class="VIDEO PLAYER">
 
                     <video width="100%" controls>
@@ -380,9 +381,8 @@
                     For Mercedes-Benz designers, good design has to be both beautiful and intelligent.
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-md justify-content-md-center">
                 <div class="skills">
-
                         <div class="row">
                             <div class="col-sm-4">
                                 <img src="img/20.jpg" class="img-fluid rounded" alt="Responsive image" >
@@ -402,7 +402,56 @@
             </div>
         </div>
     </div>
-
+                                                <!--footer-->
+    <div class="container-fluid q1">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="q5">
+                    <!--ICON-LABLE !!!!!!!!!!!!!!!!!!!!!--->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg">
+        <div class="head2">
+            <h4>Get <b>In Touch</b></h4>
+        </div>
+    </div>
+    <div class="col-lg">
+        <div class="head3">
+            Follow us and use the following social media platforms to get
+            in contact with us and to share your passion for the brand,
+            products and services of Mercedes-Benz
+        </div>
+    </div>
+    <div class="container footer">
+        <div class="row">
+            <div class="col-md-4">
+                1
+            </div>
+            <div class="col-md-4">2</div>
+            <div class="col-md-4">3</div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <input type="text" class="form-control mr-sm-2" placeholder="Name" aria-label="Name">
+            </div>
+            <div class="col-md-6">
+                <input type="text" class="form-control mr-sm-2" placeholder="Email" aria-label="Email">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <input type="text"  class="form-control mr-sm-2" placeholder="Subject" aria-label="Subject">
+                <button class="btn btn-outline-dark my-2 my-sm-0">Send</button>
+            </div>
+            <div class="col-md-6">
+                <div class="message">
+                    <textarea name="Message" cols="40" rows="5"></textarea>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
