--- a/index1.html
+++ b/index1.html
@@ -102,6 +102,28 @@
 
 
 
+<div class="col-md-3">
+    <div class="cont">
+        <div class="col-md-6">
+            <div class="midBar">Shopping</div>
+        </div>
+        <div class="col-md-6">
+            <div class="midBar">Daimler</div>
+        </div>
+    </div>
+</div>
+
+<div class="col-md-3">
+
+    <div class="col-md-6">
+        <div class="midBar">Shopping</div>
+    </div>
+    <div class="col-md-6">
+        <div class="midBar">Daimler</div>
+    </div>
+
+</div>
+
 
 
     <!-- Optional JavaScript -->
