--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="css/owl.carousel.css">
     
     <link rel="stylesheet" href="css/owl.theme.default.css">
-
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -427,32 +427,56 @@
     <div class="container footer">
         <div class="row">
             <div class="col-md-4">
-                1
+                <div class="location p1">
+
+                    <p><i class="fas fa-map-marker">    Pl.Earth Cont.Africa Gambia</i></p>
+
+                </div>
             </div>
-            <div class="col-md-4">2</div>
-            <div class="col-md-4">3</div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <input type="text" class="form-control mr-sm-2" placeholder="Name" aria-label="Name">
+            <div class="col-md-4">
+                <div class="mail p1">
+
+                    <p><i class="fas fa-at">  example@mail.com</i></p>
+
+                </div>
             </div>
-            <div class="col-md-6">
-                <input type="text" class="form-control mr-sm-2" placeholder="Email" aria-label="Email">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <input type="text"  class="form-control mr-sm-2" placeholder="Subject" aria-label="Subject">
-                <button class="btn btn-outline-dark my-2 my-sm-0">Send</button>
-            </div>
-            <div class="col-md-6">
-                <div class="message">
-                    <textarea name="Message" cols="40" rows="5"></textarea>
+            <div class="col-md-4">
+                <div class="phone p1">
+
+                    <p><i class="fa fa-phone-alt">  +8801234567890</i></p>
+
                 </div>
             </div>
         </div>
-    </div>
+        <div class="row foot">
+            <div class="col-md-6">
+                <div class="name">
+                    <input maxlength="25" size="69.5" value="Name">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="mail">
+                    <input maxlength="25" size="69.5" value="Email">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="subject">
+                    <input maxlength="25" size="69.5" value="Subject">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="message">
+                    <textarea name="Message"  cols="80" rows="4"></textarea>
+                </div>
+            </div>
+            <button class="batt btn btn-outline-dark my-2 my-sm-0">send
+            </button>
+        </div>
 
+
+
+        </div>
+    </div>
 
 
   
@@ -461,8 +485,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    
-   
+
+    <script src="https://kit.fontawesome.com/6f5108e80a.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
