--- a/index1.html
+++ b/index1.html
@@ -105,24 +105,18 @@
 <div class="col-md-3">
     <div class="cont">
         <div class="col-md-6">
-            <div class="midBar">Shopping</div>
+            <div class="midBar">
+                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A19d5539be39568920ef4cbbd4a0a15a3fab162dbef6e0d03a0801b723dd2cb38&amp;width=340&amp;height=340&amp;lang=ru_RU&amp;scroll=true">
+
+            </script>
+            </div>
         </div>
-        <div class="col-md-6">
-            <div class="midBar">Daimler</div>
-        </div>
+
     </div>
 </div>
 
-<div class="col-md-3">
 
-    <div class="col-md-6">
-        <div class="midBar">Shopping</div>
-    </div>
-    <div class="col-md-6">
-        <div class="midBar">Daimler</div>
-    </div>
 
-</div>
 
 
 
