--- a/index.html
+++ b/index.html
@@ -201,17 +201,17 @@
                     <h4>Our <b>Gallery</b></h4>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-6">
                 <div class="item2 aab"><img src="img/13.jpg" class="img-fluid rounded"></div>
                 <div class="item2 bb"><img src="img/16.jpg" class="img-fluid rounded"></div>
             </div>
 
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-6">
                 <div class="item2 bbb"><img src="img/15.jpg" class="img-fluid rounded"></div>
                 <div class="item2 aa"><img src="img/11.jpg" class="img-fluid rounded"></div>
             </div>
 
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-6">
                 <div class="item2 aaa"><img src="img/14.jpg" class="img-fluid rounded"></div>
                 <div class="item2 bbba"><img src="img/12.jpg" class="img-fluid rounded"></div>
             </div>
@@ -261,11 +261,13 @@
     <div class="container-fluid midBar1Fluid">
             <div class="row">
                 <div class="col-md-6">
+                    <div class="cls">
                         <img class="img-fluid" src="img/24.jpg">
+                    </div>
                 </div>
 
-                <div class="col-md-6">
-                        <div class="about11">Celebration</div>
+                <div class="col-md-6 justify-content-md-center">
+                        <div class="about">Celebration</div>
                         <div class="about">We are extraordinary</div>
                         <div class="about">Building on the Best</div>
                 </div>
@@ -404,12 +406,19 @@
     </div>
                                                 <!--footer-->
     <div class="container-fluid q1">
+        <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <div class="q5">
+            <div class="col-md-4 col-4">
                     <!--ICON-LABLE !!!!!!!!!!!!!!!!!!!!!--->
-                </div>
+                    <img src="img/diamond.png" class="q5"  alt="Responsive image">
             </div>
+            <div class="col-md-4 col-4">
+                    <img src="img/innovation.png" class="q5" alt="Responsive image">
+            </div>
+            <div class="col-md-4 col-4">
+                    <img src="img/light-bulb.png" class="q5" alt="Responsive image">
+            </div>
+        </div>
         </div>
     </div>
     <div class="col-lg">
@@ -451,22 +460,22 @@
         <div class="row foot">
             <div class="col-md-6">
                 <div class="name">
-                    <input maxlength="25" size="69.5" value="Name">
+                    <input maxlength="25"  value="Name">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="mail">
-                    <input maxlength="25" size="69.5" value="Email">
+                    <input maxlength="25"  value="Email">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="subject">
-                    <input maxlength="25" size="69.5" value="Subject">
+                    <input maxlength="25"  value="Subject">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="message">
-                    <textarea name="Message"  cols="80" rows="4"></textarea>
+                    <textarea name="Message"  rows="4"></textarea>
                 </div>
             </div>
             <button class="batt btn btn-outline-dark my-2 my-sm-0">send
