--- a/index.html
+++ b/index.html
@@ -202,18 +202,18 @@
                 </div>
             </div>
             <div class="col-md-4 col-6">
-                <div class="item2 aab"><img src="img/13.jpg" class="img-fluid rounded"></div>
-                <div class="item2 bb"><img src="img/16.jpg" class="img-fluid rounded"></div>
+                <div class="item2 aab"><img src="img/13.jpg" class="img-rounded"></div>
+                <div class="item2 bb"><img src="img/16.jpg" class="img-rounded"></div>
             </div>
 
             <div class="col-md-4 col-6">
-                <div class="item2 bbb"><img src="img/15.jpg" class="img-fluid rounded"></div>
-                <div class="item2 aa"><img src="img/11.jpg" class="img-fluid rounded"></div>
+                <div class="item2 bbb"><img src="img/15.jpg" class="img-rounded"></div>
+                <div class="item2 aa"><img src="img/11.jpg" class="img-rounded"></div>
             </div>
 
             <div class="col-md-4 col-6">
-                <div class="item2 aaa"><img src="img/14.jpg" class="img-fluid rounded"></div>
-                <div class="item2 bbba"><img src="img/12.jpg" class="img-fluid rounded"></div>
+                <div class="item2 aaa"><img src="img/14.jpg" class="img-rounded"></div>
+                <div class="item2 bbba"><img src="img/12.jpg" class="img-rounded"></div>
             </div>
         </div>
     </div>
