--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
     </div>
     <div class="container-fluid midBar1Fluid">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6">
                     <div class="cls">
                         <img class="img-fluid" src="img/24.jpg">
                     </div>
                 </div>
 
-                <div class="col-md-6 justify-content-md-center">
+                <div class="col-md-6 col-sm-6 justify-content-md-center">
                         <div class="about">Celebration</div>
                         <div class="about">We are extraordinary</div>
                         <div class="about">Building on the Best</div>
