--- a/index.html
+++ b/index.html
@@ -267,9 +267,11 @@
                 </div>
 
                 <div class="col-md-6 col-sm-6 justify-content-md-center">
-                        <div class="about">Celebration</div>
-                        <div class="about">We are extraordinary</div>
-                        <div class="about">Building on the Best</div>
+                    <div class="about">
+                        <div class="about2">Celebration</div>
+                        <div class="about2">We are extraordinary</div>
+                        <div class="about2">Building on the Best</div>
+                    </div>
                 </div>
             </div>
 
@@ -277,13 +279,13 @@
     <div class="container-fluid AAC">
         <div class="container 1">
             <div class="row itemS4">
-                <div class="col-lg-6">
+                <div class="col-md-6 col-sm-6">
                         <div class="about1"><h3>Get<b>Newsletter</b></h3>
                             <p>To keep you in the loop of our latest news, register now for our email newsletter</p>
                         </div>
 
                 </div>
-                <div class="col-lg-6">
+                <div class="col-md-6 col-sm-6">
                     <div class="about111">
                         <form class="form-inline my-2 my-lg-0">
                         <input type="text" class="form-control mr-sm-2" placeholder="Your email address" aria-label="Mail">
