--- a/index.html
+++ b/index.html
@@ -201,17 +201,17 @@
                     <h4>Our <b>Gallery</b></h4>
                 </div>
             </div>
-            <div class="col-md-4 col-6">
+            <div class="col-md-4 col-sm-12">
                 <div class="item2 aab"><img src="img/13.jpg" class="img-rounded"></div>
                 <div class="item2 bb"><img src="img/16.jpg" class="img-rounded"></div>
             </div>
 
-            <div class="col-md-4 col-6">
+            <div class="col-md-4 col-sm-12">
                 <div class="item2 bbb"><img src="img/15.jpg" class="img-rounded"></div>
                 <div class="item2 aa"><img src="img/11.jpg" class="img-rounded"></div>
             </div>
 
-            <div class="col-md-4 col-6">
+            <div class="col-md-4 col-sm-12">
                 <div class="item2 aaa"><img src="img/14.jpg" class="img-rounded"></div>
                 <div class="item2 bbba"><img src="img/12.jpg" class="img-rounded"></div>
             </div>
@@ -219,20 +219,18 @@
     </div>
 
     <div class="container next">
+        <div class="col-lg-12 col-md-12">
+            <div class="header2">
+                <h4>What <b>We Do</b></h4>
+            </div>
+        </div>
         <div class="row">
-            <div class="col-lg-12">
-                <div class="header2">
-                    <h4>What <b>We Do</b></h4></div>
+            <div class="col-md-6 col-sm-12">
+                <div class="innovation">
+                    <img src="img/23.jpg" class="img-fluid innovation" alt="Responsive image" class="img-fluid rounded">
+                </div>
             </div>
-            <div class="col-md-5">
-
-
-                        <img src="img/23.jpg" class="img-fluid innovation" alt="Responsive image" class="img-fluid rounded">
-
-
-            </div>
-
-            <div class="col-md-6 offset-md-1">
+            <div class="col-md-6 col-sm-12">
                  <div class="row itemS1">
                      <div class="col-md-4">
                          <div class="tt">content</div>
@@ -257,6 +255,7 @@
                 </div>
             </div>
         </div>
+        </div>
     </div>
     <div class="container-fluid midBar1Fluid">
             <div class="row">
@@ -266,7 +265,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-sm-6 justify-content-md-center">
+                <div class="col-md-6 col-sm-6">
                     <div class="about">
                         <div class="about2">Celebration</div>
                         <div class="about2">We are extraordinary</div>
@@ -299,7 +298,7 @@
     </div>
     <div class="container BLOG">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 col-sm-12">
                 <div class="header3">
                     <h4>Mercedes-Benz: <b>Innovation</b></h4>
                     As a pioneer of the automobile, we seek innovations which provide for pleasant,
@@ -312,7 +311,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <div class="skills">
                     <img src="img/17.jpg" alt="image"class="img-fluid rounded">
                     <div class="text center-fluid">
@@ -323,7 +322,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <div class="skills">
                     <img src="img/f015.jpg" alt="image" class="img-fluid rounded">
                     <div class="text center-fluid">
@@ -336,7 +335,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <div class="skills">
                     <img src="img/car2go.jpg" alt="image" class="img-fluid rounded">
                     <div class="text center-fluid">
@@ -377,7 +376,7 @@
     </div>
     <div class="container client">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 col-sm-12">
                 <div class="header3"><h4>Mercedes-Benz Design: <b>Sensual Purity and Modern Luxury</b></h4>
                     The designers at Mercedes-Benz are reconciling tradition and modernity in designing the cars for the future.
                     Their work centres on “Sensual Purity” as an expression of modern luxury.
@@ -423,7 +422,7 @@
         </div>
         </div>
     </div>
-    <div class="col-lg">
+    <div class="col-lg col-sm">
         <div class="head2">
             <h4>Get <b>In Touch</b></h4>
         </div>
@@ -444,14 +443,14 @@
 
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <div class="mail p1">
 
                     <p><i class="fas fa-at">  example@mail.com</i></p>
 
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <div class="phone p1">
 
                     <p><i class="fa fa-phone-alt">  +8801234567890</i></p>
@@ -460,22 +459,22 @@
             </div>
         </div>
         <div class="row foot">
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
                 <div class="name">
                     <input maxlength="25"  value="Name">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
                 <div class="mail">
                     <input maxlength="25"  value="Email">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
                 <div class="subject">
                     <input maxlength="25"  value="Subject">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
                 <div class="message">
                     <textarea name="Message"  rows="4"></textarea>
                 </div>
