--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
             <div class="col-md-4 col-sm-12">
                 <div class="item2 bbb"><img src="img/15.jpg" class="img-rounded"></div>
-                <div class="item2 aa"><img src="img/11.jpg" class="img-rounded"></div>
+                <div class="item2 aa3"><img src="img/11.jpg" class="img-rounded"></div>
             </div>
 
             <div class="col-md-4 col-sm-12">
