--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <!-- Required meta tags -->
@@ -33,7 +33,7 @@
             <p class="navbar-text mb">Mercedes-Benz</p>
         </li>  
     </ul>
-</div>
+        </div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,38 +106,38 @@
     <div class="container main">
         <div class="container header">
             <div class="row">
-                <div class="col-lg">
+                <div class="col-lg col">
                     <div class="headEr"><h4>Our <b>Awesome Service</b></h4>
                     </div>
                 </div>
             </div>
         </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-4">
                     <div class="cont">All about cars</div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-4">
                     <div class="cont">News</div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-4">
                     <div class="cont">Discover more</div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-4">
                     <div class="cont">Electric Intelligence by Mercedes-Benz</div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-4">
                     <div class="cont">Mercedes-Benz Museum</div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-4">
                     <div class="cont">She's Mercedes</div>
                 </div>
             </div>
     </div>
 <!--OurGoal-->
     <div class="container-fluid midBar1Fluid">
-             <div class="col-lg">
+             <div class="col-lg col-sm">
                  <div class="head2">
                      <h4>Our <b>Goal</b></h4>
                  </div>
@@ -171,20 +171,20 @@
                         </div>
                      </div>
                  </div>
-                 <div class="col-md-6">
+                 <div class="col-md-6 col-6">
                      <div class="row">
-                         <div class="col-md-6">
+                         <div class="col-md-6 col-6">
                              <div class="midBar">Shopping</div>
                          </div>
-                         <div class="col-md-6">
+                         <div class="col-md-6 col-6">
                              <div class="midBar">Daimler</div>
                          </div>
                      </div>
                      <div class="row">
-                         <div class="col-md-6">
+                         <div class="col-md-6 col-6">
                              <div class="midBar">Shopping</div>
                          </div>
-                         <div class="col-md-6">
+                         <div class="col-md-6 col-6">
                              <div class="midBar">Daimler</div>
                          </div>
                      </div>
@@ -196,22 +196,22 @@
 
     <div class="container ABS">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 col-12">
                 <div class="header2">
                     <h4>Our <b>Gallery</b></h4>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-4 col-12">
                 <div class="item2 aab"><img src="img/13.jpg" class="img-rounded"></div>
                 <div class="item2 bb"><img src="img/16.jpg" class="img-rounded"></div>
             </div>
 
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-4 col-12">
                 <div class="item2 bbb"><img src="img/15.jpg" class="img-rounded"></div>
                 <div class="item2 aa3"><img src="img/11.jpg" class="img-rounded"></div>
             </div>
 
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-4 col-12">
                 <div class="item2 aaa"><img src="img/14.jpg" class="img-rounded"></div>
                 <div class="item2 bbba"><img src="img/12.jpg" class="img-rounded"></div>
             </div>
@@ -427,13 +427,17 @@
             <h4>Get <b>In Touch</b></h4>
         </div>
     </div>
-    <div class="col-lg">
-        <div class="head3">
+
+        <div class="container head3">
+            <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
             Follow us and use the following social media platforms to get
             in contact with us and to share your passion for the brand,
             products and services of Mercedes-Benz
+            </div>
+            </div>
         </div>
-    </div>
+
     <div class="container footer">
         <div class="row">
             <div class="col-md-4">
