--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6">
                     <div class="cls">
-                        <img class="img-fluid" src="img/24.jpg">
+                        <img class="image-fluid cel" src="img/24.jpg">
                     </div>
                 </div>
 
@@ -517,9 +517,9 @@
         touchDrag: true,
         mergeFit: false,
         autoplay: true,
-        autoplayTimeout: 6000,
+        autoplayTimeout: 5000,
         autoplayHoverPause: true,
-        smartSpeed: 3000,
+        smartSpeed: 2000,
         responsive: {
             0:{items:1},
             600:{items:2},
@@ -528,8 +528,8 @@
         }
     });
 
-    $(".slide-two").owlCarousel({
-        autoHeight: true,
+   $(".slide-two").owlCarousel({
+         autoHeight: true,
         loop: true,
         slideBy: 1,
         fluidSpeed: 1000,
@@ -539,7 +539,7 @@
         autoplay: true,
         autoplayTimeout: 10000,
         autoplayHoverPause: true,
-        smartSpeed: 4000,
+        smartSpeed: 5000,
         responsive: {
             0:{items:1},
             600:{items:1},
