--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
                 <div class="VIDEO PLAYER">
 
                     <video width="100%" controls>
-                        <source src="video/videoplayback.mp4" type="video/mp4">
-                        <source src="video/videoplayback.mp4" type="video/ogg">
+                        <source src="video/EQS.mp4" type="video/mp4">
+                       <!-- <source src="video/EQS.mp4" type="video/ogg"> -->
                         Your browser does not support HTML5 video.
                     </video>
 
